--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       >
         <div>
           <div class="flex items-center">
-            <h4 role="alert" aria-labelledby="alertsText" class="text-dark text-lg font-medium mr-auto">
+            <h4 class="text-dark text-lg font-medium mr-auto">
               Alerts
             </h4>
-            <span class="sr-only" aria-live="polite" id="alertsText">Notification dropdown header. Alerts</span>
+            <button class="sr-only" aria-disabled="true" aria-label="Notification dropdown header."></button>
 
             <div class="flex items-center gap-10">
               <button role="button" aria-label="Press enter to filter notifications" class="btn_transparent" role="button">
@@ -168,7 +168,7 @@
             Alerts about your store and account will show here
           </p>
 
-          <span class="sr-only" aria-live="polite" id="messageText">Alert message. Alerts about your store and account will show here</span>
+          <span class="sr-only" aria-live="polite" id="messageText"></span>
         </div>
       </menu>
 
